# linvoc

./: .gitignore  .pylintrc  README.md  build_appimage.sh  install.sh  linvoc.sh  pyproject.toml  requirements.txt
src/: __init__.py  main.py
src/backends/: __init__.py  portal_backend.py  xdotool_backend.py  ydotool_backend.py
src/core/: __init__.py  dictation.py  engine_base.py  environment.py  faster_whisper_engine.py  parakeet_engine.py  single_instance.py  text_injector.py  vosk_engine.py  whisper_engine.py
src/gui/: __init__.py  main_window.py  styles.py
tests/: __init__.py  test_dictation.py  test_environment.py  test_injector.py
