[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linvoc"
version = "0.1.0"
description = "Application de dictée vocale pour Linux"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Louis"}
]
keywords = ["voice", "dictation", "speech-to-text", "linux", "accessibility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Accessibility",
]
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
    "dbus-python>=1.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.scripts]
linvoc = "src.main:main"

[project.urls]
Homepage = "https://github.com/louis/linvoc"
Repository = "https://github.com/louis/linvoc"
Issues = "https://github.com/louis/linvoc/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "build", "dist"]
